--- a/2017年一些计划.md
+++ b/2017年一些计划.md
@@ -31,6 +31,11 @@
 	
 	5.NIO学习（Netty）
 
+##技能扩展
+	1.利用GO语言写一个网络爬虫
+	2.学习单片机相关知识，利用51开发板给小孩做一个小玩具，培养其动手的兴趣
+	3.学习机器学习数据挖掘相关的基础知识，利用网络爬虫爬取信息，利用数据挖掘技术挖着感兴趣的内容
+	4.了解eclipse插件的开发，开发一个接口UT覆盖的工具，若接口无UT，则提醒报错
 
 
 
